# meSMSage

./: .coveragerc  .gitignore  .gitmessage  .pre-commit-config.yaml  .pylintrc  README.md
.github/workflows/: build.yml
meSMSage/: README.md  project.yml  pyproject.toml  pytest.ini
meSMSage/assets/: docs_intents_dev.jsonl  docs_intents_training.jsonl
meSMSage/corpus/: dev.spacy  train.spacy
meSMSage/meSMSage/: __main__.py  configure.py  demonstrate.py  sheet.py  sheets.py
meSMSage/mesmsage/: __main__.py  configure.py  constants.py  demonstrate.py  extract.py  interface.py  main.py  nlp.py  sheets.py  sms.py  util.py  visualize.py  webhook.py
meSMSage/scripts/: tasks.py
meSMSage/tests/: conftest.py  test_constants.py  test_extract.py  test_interface.py  test_nlp.py  test_sheet.py  test_sheets.py  test_sms.py  test_util.py
