[tool.poetry]
name = "meSMSage"
version = "0.1.0"
description = ""
authors = ["Gregory M. Kapfhammer <gkapfham@allegheny.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
gspread = "^3.7.0"
sheetfu = "^1.5.4"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = "^20.8b1"
pydocstyle = "^5.1.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
